! Fixed admin submenus glitch on very narrow screens and break on edit themes page. (index.css, admin.css) [Bug 4571] [Bug 4581]
Note: earlier 4571 "fix" suffered from lack of caffeine. This one might work.

git-svn-id: https://devel.simplemachines.org/code/smf/trunk@10363 a96bbafc-d752-43aa-a6db-eed64a5f2cf9

--- a/Themes/default/css/index.css
+++ b/Themes/default/css/index.css
@@ -1319,11 +1319,13 @@ ul#navigation li
 #adm_submenus
 {
 	padding-left: 2em;
-	clear: both;
+	overflow: hidden;
+	height: 3em;
 }
-#adm_submenus, #adm_submenus ul
+#adm_submenus ul
 {
 	height: 3em;
+	clear: both;
 }
 
 /* Styles for the general looks for the Curve theme.
